--- a/Starbucks_Capstone_notebook.ipynb
+++ b/Starbucks_Capstone_notebook.ipynb
@@ -1168,7 +1168,7 @@
    "source": [
     "idx_row = portfolio['id'].unique()\n",
     "\n",
-    "transcript['Category'] = [cat_col[item] for item in plagiarism_df['Category']] "
+    "transcript['Category'] = [cat_col[item] for item in transcript['Category']] "
    ]
   },
   {
